# tmp

./: .gitattributes  main.py  main_model.py  mise.toml  pyproject.toml  test_attack_prediction.py  test_clustering.py  test_detector.py
GUI/: README.md  controller.py  main.py
GUI/UML/: uml.vpp  uml.vpp.bak_000f  uml.vpp.bak_001d  uml.vpp.bak_002d  uml.vpp.bak_003d  uml.vpp.bak_004d  uml.vpp.bak_005d
GUI/custom_data_type/: adaptcanvas.py  borderbutton.py  canvasitem.py  gifcanvas.py
GUI/menus/: choosing.py  final.py  loading.py  menu.py
GUI/utils/: resize.py  signals.py
analysis/: attack_prediction.py
color_clustering/: clustering.py
detection/: detector.py
model/: prova_team_classificaation.py
offside/: homography.py  homography_calculator.py  offside_detection.py
results/: homography.pt
sportsfield_release/: test_end2end.py
sportsfield_release/datasets/: aligned_dataset.py
sportsfield_release/models/: base_model.py  end_2_end_optimization.py  end_2_end_optimization_helper.py  init_guesser.py  loss_surface.py  resnet.py
sportsfield_release/options/: options_check.py  options_utils.py
sportsfield_release/utils/: metrics.py  util.py  warp.py
sportsfield_release/world_cup_data_augmentation/: h5_builder.py  raw_data_loader.py
visualization/: visualize.py
